--- a/src/html/config.html
+++ b/src/html/config.html
@@ -5,10 +5,10 @@ https://github.com/kintone/SAMPLE-Character-count-plug-in/blob/master/LICENSE --
 <div>
 	<div class="block">
 		<label class="kintoneplugin-label">
-			<span id ="container_label">Multi-line Text Field </span>
+			<span id ="container_label">Text Area Field </span>
 			<span class="kintoneplugin-require">*</span>
 		</label>
-		<div class="kintoneplugin-row">Please select a multi-line text field</div>
+		<div class="kintoneplugin-row">Please select a Text Area field</div>
 		<div class="kintoneplugin-select-outer">
 			<div class="kintoneplugin-select">
 				<select id="select_body_field" name="select_body_field">
@@ -22,7 +22,7 @@ https://github.com/kintone/SAMPLE-Character-count-plug-in/blob/master/LICENSE --
 			<span id ="container_label">Result of Count Field</span>
 			<span class="kintoneplugin-require">*</span>
 		</label>
-		<div class="kintoneplugin-row">Please select a number field</div>
+		<div class="kintoneplugin-row">Please select a Number field</div>
 		<div class="kintoneplugin-select-outer">
 			<div class="kintoneplugin-select">
 				<select id="select_count_field" name="select_count_field">
