Updated wording of title settings

--- a/src/html/config.html
+++ b/src/html/config.html
@@ -5,7 +5,7 @@ https://github.com/kintone/SAMPLE-Character-count-plug-in/blob/master/LICENSE --
 <div>
 	<div class="block">
 		<label class="kintoneplugin-label">
-			<span id ="container_label">Text Area Field </span>
+			<span id ="container_label">Field to Count</span>
 			<span class="kintoneplugin-require">*</span>
 		</label>
 		<div class="kintoneplugin-row">Please select a Text Area field</div>
@@ -19,7 +19,7 @@ https://github.com/kintone/SAMPLE-Character-count-plug-in/blob/master/LICENSE --
 	</div>
 	<div class="block">
 		<label class="kintoneplugin-label">
-			<span id ="container_label">Result of Count Field</span>
+			<span id ="container_label">Field to Store Character Counts</span>
 			<span class="kintoneplugin-require">*</span>
 		</label>
 		<div class="kintoneplugin-row">Please select a Number field</div>
