--- a/src/html/config.html
+++ b/src/html/config.html
@@ -5,7 +5,7 @@ https://github.com/kintone/SAMPLE-Character-count-plug-in/blob/master/LICENSE --
 <section>
 	<form class="js-submit-settings">
 		<div class="kintoneplugin-row">
-			<label for="container_label" class="kintoneplugin-label">
+			<label for="select_body_field" class="kintoneplugin-label">
 				Field to Count
 				<span class="kintoneplugin-require">*</span>
 			</label>
